# SGXOram

./: .gitignore  .gitmodules  Makefile  README.md  run.sh  run_2.sh  small_epoch.sh
PartitionORAM/: .gitignore  CMakeLists.txt  README.md  TODOs  deps.sh  test.sh
PartitionORAM/PathORAM/: README.md  path_oram.cpp  poram
PartitionORAM/base/: CMakeLists.txt  oram_crypto.cc  oram_crypto.h  oram_defs.h  oram_status.h  oram_utils.cc  oram_utils.h
PartitionORAM/client/: CMakeLists.txt  client.cc  client.h  main.cc  oram_client.cc  oram_client.h  oram_controller.cc  oram_controller.h
PartitionORAM/protos/: messages.grpc.pb.cc  messages.grpc.pb.h  messages.pb.cc  messages.pb.h  messages.proto
PartitionORAM/server/: CMakeLists.txt  main.cc  oram_server.cc  oram_server.h  oram_storage.cc  oram_storage.h
include/: models.hh  utils.hh
key/: key.pem
sgx/: .gdbinit  .gitignore  Makefile  README.md  REAME.md  TODOs  a.out  backup.txt  client.csr  config.xml  env.sh  keygen.sh  out.txt  server.csr  test.sh  uninstall.sh.1
sgx/check_sgx/: check.mk
sgx/include/: configs.hh  messages.grpc.pb.h  messages.pb.h  ra_messages.hh  utils.hh
sgx/include/app/: app.hh  basic_models.hh  models.hh
sgx/include/client/: client.hh  utils.hh
sgx/include/enclave/: enclave.hh  enclave_crypto_manager.hh  enclave_t.h  enclave_u.h  enclave_utils.hh
sgx/include/server/: basic_models.hh  utils.hh
sgx/include/service_provider/: ecp.h  network_ra.h  (+1 more)
sgx/key/: key.pem
sgx/protos/: messages.grpc.pb.cc  messages.pb.cc  messages.proto
simulator/: Makefile  err.txt  output.txt  run.sh  run_2.sh  small_epoch.sh
simulator/include/: models.hh
simulator/src/: main.cc  oram.cc  parser.cc  slot.cc  utils.cc
src/: experiment.cc  main.cc  models.cc  oram.cc  parser.cc  slot.cc  utils.cc
src/app/: app.cc
src/enclave/: enclave.cc  enclave_t.c
(+58 files in other folders)
